# jdmodeltests

./: .gitignore  README.md
Junction/: setup.sh
data/: README.md
dockerfiles/: Dockerfile.distilbert  Dockerfile.distilgpt2  exec.sh
faasd_junction/faasd/pkg/provider/handlers/: deploy.go
invocation/: invokepattern.py  latency_ow_k8s.csv  owsetup.sh  preprocess_trace.py  values.yaml
junction-functions/: CMakeLists.txt  compilation_example.txt  distilbert_infer  distilbert_infer.cpp  gateway.cpp  gateway_usage.txt  gpt2_infer.cpp  run_gateway_in_junction.sh
junction-functions/distilbert/: distilbert_infer.cpp  distilbert_service.cpp
junction-functions/distilgpt2/: CMakeLists.txt  cpp_dep.sh  distilgpt2_infer.cpp
junction-functions/junction_distilbert-warm/: distilbert-warm.config
junctiond/: CMakeLists.txt  README.md  junctiond.cpp  junctiond.h  junctiond_server.cpp  junctionsetup.sh  main.cpp  makefile  test.cpp  test_infer.cpp
junctiond/proto/: junctiond.pb.go  junctiond.proto  junctiond_grpc.pb.go
models/: README.md  distilgpt2req.txt  export_distilgpt2_onnx.py  export_gpt2_onnx.py  setup.sh
pythonmodel/: __main__.py  distilbert.py  install.sh
test/: example_test.txt  latency_test.py
